fix: 팀 INSERT/UPDATE reactive 로직 수정